fix to z-index and more names/bios/pics

--- a/css/main.css
+++ b/css/main.css
@@ -4419,7 +4419,7 @@ nav li a.current, nav li a:hover {
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 1040
+    z-index: 10;
 }
 
 .modal-content {
